--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
