--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
