--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mailtrap": "^3.4.0",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "xlsx": "^0.18.5"
   }
