--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,12 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "framer-motion": "^12.0.6",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
